--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Blocket Privacy Policy</h1>
-    <p><strong>Last Updated:</strong> [Date]</p>
+    <p><strong>Last Updated:</strong> 2025-12-13 </p>
     
     <h2>Data Collection</h2>
     <p>Blocket does not collect, transmit, or share any user data. All information is stored locally on your device using Chrome's local storage API.</p>
