--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
     <p>If we make changes to this privacy policy, we will update the "Last Updated" date at the top of this page.</p>
     
     <h2>Contact</h2>
-    <p>If you have questions about this privacy policy, please contact us at [your email or GitHub issues page].</p>
+    <p>If you have questions about this privacy policy, please contact us at fco.suarez.salas[at]gmail.com.</p>
 </body>
 </html>
